use objective-c for quartz
https://bugzilla.gnome.org/show_bug.cgi?id=646743

--- a/configure.ac
+++ b/configure.ac
@@ -445,6 +445,11 @@ case $gdk_target in
         ;;
 esac
 
+if test "x$gdktarget" = "xquartz"; then
+  AM_CONDITIONAL(USE_QUARTZ, true)
+else
+  AM_CONDITIONAL(USE_QUARTZ, false)
+fi
 
 dnl checks to see if numpy is installed.
 AC_ARG_ENABLE(numpy,
