--- a/debian/rules
+++ b/debian/rules
@@ -196,9 +196,9 @@ binary-arch: build install $(maybe_check)
 	dh_compress -s -X.py -X.glade
 	dh_fixperms -s
 	dh_python2 -a
-	if ! dpkg-vendor --is ubuntu; then \
-		dh_numpy -s -ppython-gtk2; \
-	fi
+	#if ! dpkg-vendor --is ubuntu; then \
+	#	dh_numpy -s -ppython-gtk2; \
+	#fi
 	dh_installdeb -s
 	dh_shlibdeps -s
 	dh_gencontrol -s
