control: add dh_python

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 8),
                gnome-pkg-tools (>= 0.10),
                cdbs,
                dh-autoreconf,
+               dh-python,
                xvfb (>= 2:1.6.0), xauth, xfonts-base,
                python-all-dev (>= 2.6.6-3~),
                python-all-dbg,
